@@ -25,7 +25,7 @@
  */
 class AppComponent extends Component {
 	
-}
+} // End AppComponent Class
 
 /**
  * @package app
